Buildtime: BUILDTIME

Change Log:
----------------------------------------------------------------------

3.2.3 ( 2018-xx-xx )
----------------------------------------------------------------------
- Added "custom_sidebars_allowed_pages_array" filter to allow pages where Custom Sidebars can be loaded.
- Fixed problem with double function declaration when Gutenberg is in use.

3.2.2 ( 2018-10-25 )
----------------------------------------------------------------------
- Fixed a unclosed A tag.

3.2.1 ( 2018-08-22 )
----------------------------------------------------------------------
- Fixed a problem with sidebar replacement on front page.

3.2.0 ( 2018-08-13 )
----------------------------------------------------------------------
- Added ability show/hide widgets depend on screen size, using CSS media queries.
- Added integration with "WP Multilang" - now you can choose a sidebar to depend on "WP Multilang" language.
- Allow using categories and tags for pages.
- Improved plugin initialization now, plugin classes are loaded only on necessary admin pages.
- Improved UX for Custom Sidebars Metabox on special pages: "Front Page", "Blog Page" and "WooCommerce Shop Page".
- Updated "WPMU Dev code library" to version 3.0.9.

3.1.6 ( 2018-05-28 )
----------------------------------------------------------------------
- Fixed an export problem on PHP 5.2, json_encode() have only one parameter.

3.1.5 ( 2018-05-14 )
----------------------------------------------------------------------
- Fixed a problem with saving an entry sidebars replacement.
- Added ability to allow change sidebars by an entry author.

3.1.4 ( 2018-05-02 )
----------------------------------------------------------------------
- Fixed a problem with widgets display on IE11.
- Handle custom taxonomies.
- Updated "WPMU Dev code library" to version 3.0.6.

3.1.3 ( 2018-03-21 )
- Added version to scripts, to avoid browser cache problem.
- Fixed problems with widgets alignment on mobiles.